appointments retrival and notifications added
